force-app/main/default/objects/General_Pricing__c/General_Pricing__c.object-meta.xml
<CustomObject>
    <label>General Pricing</label>
    <nameField>
        <displayFormat>GP-{0000000}</displayFormat>
        <label>General Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>