force-app/main/default/objects/General_Pricing__c/fields/AE_SB_Price_NZD__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Price_NZD__c</fullName>
    <label>AE/SB Price-NZD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>