force-app/main/default/objects/General_Pricing__c/fields/AE_SB_Type__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Type__c</fullName>
    <formula>TEXT( AE_SB__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE/SB Type</label>
    <type>Text</type>
</CustomField>