force-app/main/default/objects/General_Pricing__c/fields/Default_GP__c.field-meta.xml
<CustomField>
    <fullName>Default_GP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default GP</label>
    <referenceTo>General_Pricing__c</referenceTo>
    <relationshipLabel>General Pricings</relationshipLabel>
    <relationshipName>General_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>