force-app/main/default/objects/General_Pricing__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure City</label>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>General Pricings</relationshipLabel>
    <relationshipName>General_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>