force-app/main/default/objects/General_Pricing__c/fields/Departures_dates__c.field-meta.xml
<CustomField>
    <fullName>Departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>General Pricings</relationshipLabel>
    <relationshipName>General_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>