force-app/main/default/objects/General_Pricing__c/fields/GP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GP_End_Date__c</fullName>
    <label>GP End Date</label>
    <type>DateTime</type>
</CustomField>