force-app/main/default/objects/General_Pricing__c/fields/GP_LookUp_Search__c.field-meta.xml
<CustomField>
    <fullName>GP_LookUp_Search__c</fullName>
    <formula>&apos;Active :&apos;+IF( Active__c = True, &quot;True&quot;,&quot;False&quot;)+ &apos;/&apos;+ &apos;Price-AUD :&apos; +  TEXT(Price_AUD__c )+&apos;/&apos;+ &apos;Solo Surcharge - AUD :&apos;+ TEXT(Solo_Surcharge_AUD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP LookUp Search</label>
    <type>Text</type>
</CustomField>