force-app/main/default/objects/General_Pricing__c/fields/GP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GP_Start_Date__c</fullName>
    <label>GP Start Date</label>
    <type>DateTime</type>
</CustomField>