force-app/main/default/objects/General_Pricing__c/fields/HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>