force-app/main/default/objects/General_Pricing__c/fields/HSS_Cost__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>