force-app/main/default/objects/General_Pricing__c/fields/LA_Solo_Price__c.field-meta.xml
<CustomField>
    <fullName>LA_Solo_Price__c</fullName>
    <label>LA Solo Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>