force-app/main/default/objects/General_Pricing__c/fields/LA_Twin_Price__c.field-meta.xml
<CustomField>
    <fullName>LA_Twin_Price__c</fullName>
    <label>LA Twin Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>