force-app/main/default/objects/General_Pricing__c/fields/Price_Airline_upgrade__c.field-meta.xml
<CustomField>
    <fullName>Price_Airline_upgrade__c</fullName>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>