force-app/main/default/objects/General_Pricing__c/fields/Price_AUD__c.field-meta.xml
<CustomField>
    <fullName>Price_AUD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price - AUD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>