force-app/main/default/objects/General_Pricing__c/fields/Solo_Surcharge_NZD__c.field-meta.xml
<CustomField>
    <fullName>Solo_Surcharge_NZD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Solo Surcharge - NZD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>