force-app/main/default/objects/General_Pricing__c/fields/Stopover_Type__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Type__c</fullName>
    <formula>TEXT( Sub_Stopover__r.type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopover Type</label>
    <type>Text</type>
</CustomField>