force-app/main/default/objects/General_Pricing__c/fields/Sub_Options__c.field-meta.xml
<CustomField>
    <fullName>Sub_Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Options</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>General Pricings</relationshipLabel>
    <relationshipName>General_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>