force-app/main/default/objects/General_Pricing__c/fields/Sub_Stopover__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stopover</label>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>General Pricings</relationshipLabel>
    <relationshipName>General_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>