force-app/main/default/objects/General_Pricing__c/fields/Surcharge_NZD__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_NZD__c</fullName>
    <label>Surcharge - NZD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>