force-app/main/default/objects/General_Pricing__c/recordTypes/Departure_City.recordType-meta.xml
<RecordType>
    <fullName>Departure_City</fullName>
    <active>true</active>
    <label>Departure City</label>
</RecordType>