force-app/main/default/objects/General_Pricing__c/recordTypes/Departure_Date.recordType-meta.xml
<RecordType>
    <fullName>Departure_Date</fullName>
    <active>true</active>
    <label>Departure Date</label>
</RecordType>