force-app/main/default/objects/General_Pricing__c/recordTypes/Land_Activity.recordType-meta.xml
<RecordType>
    <fullName>Land_Activity</fullName>
    <active>true</active>
    <label>Land Activity</label>
</RecordType>