force-app/main/default/objects/General_Pricing__c/recordTypes/Sub_Option.recordType-meta.xml
<RecordType>
    <fullName>Sub_Option</fullName>
    <active>true</active>
    <label>Sub Option</label>
</RecordType>