force-app/main/default/objects/General_Pricing__c/recordTypes/Sub_Stopover.recordType-meta.xml
<RecordType>
    <fullName>Sub_Stopover</fullName>
    <active>true</active>
    <label>Stopover</label>
</RecordType>