force-app/main/default/objects/General_Pricing__c/validationRules/Departure_Date_Field_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Date_Field_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Departures_dates__c !=null &amp;&amp; ( Price_AUD__c !=0 || Solo_Surcharge_AUD__c !=0 || Price_NZD__c !=0 || Solo_Surcharge_NZD__c !=0 )</errorConditionFormula>
    <errorMessage>Sub Option Section fields can&apos;t be filled</errorMessage>
</ValidationRule>