force-app/main/default/objects/General_Pricing__c/validationRules/Prevent_GP_edit_Post_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_GP_edit_Post_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ( ISCHANGED(Price_AUD__c) || ISCHANGED(Price_NZD__c) || ISCHANGED(Solo_Surcharge_AUD__c) || ISCHANGED(Solo_Surcharge_NZD__c) || ISCHANGED(Sub_Options__c))</errorConditionFormula>
    <errorMessage>You can&apos;t edit GP record contact your manager</errorMessage>
</ValidationRule>