force-app/main/default/objects/General_Pricing__c/validationRules/Sub_Option_Field_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Option_Field_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Sub_Options__c !=null &amp;&amp; ( HSS_Amount__c !=0 || HSS_Amount_NZ__c !=0 || HSS_Cost__c !=0 )</errorConditionFormula>
    <errorMessage>Departure Date Section fields can&apos;t be filled</errorMessage>
</ValidationRule>